changing wrong margin, corrected now

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -48,8 +48,8 @@ font-family: 'Anton', sans-serif;*/
   font-style: italic;
 }
 .textMarginTwo {
-  margin-left:85px;
-  margin-right:50px;
+  margin-left:50px;
+  margin-right:75px;
 }
 .textMargin {
   margin:50px;
